--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -93,7 +93,7 @@
             <RadzenPanelMenuItem Text="Identkartens" Path="kartens" />
             <RadzenPanelMenuItem Text="Speditionens" Path="speditionens" />
             <RadzenPanelMenuItem Text="Filterabfragens" Path="filterabfragens" />
-            <RadzenPanelMenuItem Text="FAHRZEUGE" Path="FRZG" />
+            <RadzenPanelMenuItem Text="FAHRZEUGE" Path="FRZG" Icon="person" />
         </RadzenPanelMenu>
         <div class="py-3 py-md-4" style="padding: var(--rz-panel-menu-item-padding);">
             <RadzenText Text="QwTest7 v1.0.0" TextStyle="Radzen.Blazor.TextStyle.Caption" style="color: var(--rz-text-disabled-color);" TagName="Radzen.Blazor.TagName.P" TextAlign="Radzen.TextAlign.Center" />
