--- a/Pages/Blacki/FRZG.razor
+++ b/Pages/Blacki/FRZG.razor
@@ -19,7 +19,7 @@
         <RadzenDataGrid @ref="grid0"
                         ColumnWidth="200px"
                         AllowFiltering="true" FilterMode="FilterMode.Advanced"
-                        AllowPaging="true" PageSize="15"
+                        AllowPaging="true" PageSize="@PageSize"
                         AllowVirtualization="false"
                         PageSizeOptions="@pageSizeOptions"
                         ShowPagingSummary="@showPagerSummary" PagingSummaryFormat="@pagingSummaryFormat"
