--- a/Shared/GlobalMenu.razor
+++ b/Shared/GlobalMenu.razor
@@ -1,7 +1,8 @@
 ﻿@using Radzen
 <RadzenMenu Click="OnParentClicked" @attributes=@Attributes>
     <RadzenMenuItem Text="General" Icon="home">
-        <RadzenMenuItem Text="Buttons" Path="buttons" Icon="account_circle"></RadzenMenuItem>
+        <RadzenMenuItem Text="INI Daten" Path="inidata" Icon="account_circle"></RadzenMenuItem>
+
         <RadzenMenuItem Text="Menu" Path="menu" Icon="line_weight"></RadzenMenuItem>
         <RadzenMenuItem Click="OnChildClicked" Text="ChildClick" Icon="attach_file"></RadzenMenuItem>
         <RadzenMenuItem Text="Dialog" Path="dialog" Icon="perm_media"></RadzenMenuItem>
