--- a/DpeZak.Portal/Pages/Kmp/Inilist.razor
+++ b/DpeZak.Portal/Pages/Kmp/Inilist.razor
@@ -32,12 +32,12 @@
                             SelectionMode="DataGridSelectionMode.Single" @bind-Value=@selectedList
                             Density="@Density"
                             Data="@iniSet"
-                            TItem="R_INIT"
+                            TItem="RInit"
                             ColumnWidth="300px"
                             LogicalFilterOperator="LogicalFilterOperator.Or">
                 <Columns>
-                    <RadzenDataGridColumn TItem="R_INIT" Property="SECTION" Title="SECTION" Width="160px" />
-                    <RadzenDataGridColumn TItem="R_INIT" Property="TYP" Title="TYP" Width="160px" />
+                    <RadzenDataGridColumn TItem="RInit" Property="SECTION" Title="SECTION" Width="160px" />
+                    <RadzenDataGridColumn TItem="RInit" Property="TYP" Title="TYP" Width="160px" />
                 </Columns>
             </RadzenDataGrid>
         </RadzenTabsItem>
@@ -56,14 +56,14 @@
                             SelectionMode="DataGridSelectionMode.Single" @bind-Value=@selectedList
                             Density="@Density"
                             Data="@AnweSet"
-                            TItem="R_INIT"
+                            TItem="RInit"
                             ColumnWidth="300px"
                             LogicalFilterOperator="LogicalFilterOperator.Or"
                             AllowGrouping="true" HideGroupedColumn="true" @bind-AllGroupsExpanded="@allGroupsExpanded" Group="@OnGroup">
                 <Columns>
-                    <RadzenDataGridColumn TItem="R_INIT" Property="SECTION" Title="SECTION" Width="160px" />
-                    <RadzenDataGridColumn TItem="R_INIT" Property="PARAM" Title="PARAM" Width="160px" Groupable="false" />
-                    <RadzenDataGridColumn TItem="R_INIT" Property="WERT" Title="WERT" Width="160px" Groupable="false" />
+                    <RadzenDataGridColumn TItem="RInit" Property="SECTION" Title="SECTION" Width="160px" />
+                    <RadzenDataGridColumn TItem="RInit" Property="PARAM" Title="PARAM" Width="160px" Groupable="false" />
+                    <RadzenDataGridColumn TItem="RInit" Property="WERT" Title="WERT" Width="160px" Groupable="false" />
                 </Columns>
             </RadzenDataGrid>
         </RadzenTabsItem>
@@ -82,14 +82,14 @@
                             SelectionMode="DataGridSelectionMode.Single" @bind-Value=@selectedList
                             Density="@Density"
                             Data="@MaschineSet"
-                            TItem="R_INIT"
+                            TItem="RInit"
                             ColumnWidth="300px"
                             LogicalFilterOperator="LogicalFilterOperator.Or"
                             AllowGrouping="true" HideGroupedColumn="true" @bind-AllGroupsExpanded="@allGroupsExpanded" Group="@OnGroup">
                 <Columns>
-                    <RadzenDataGridColumn TItem="R_INIT" Property="SECTION" Title="SECTION" Width="160px" />
-                    <RadzenDataGridColumn TItem="R_INIT" Property="PARAM" Title="PARAM" Width="160px" Groupable="false" />
-                    <RadzenDataGridColumn TItem="R_INIT" Property="WERT" Title="WERT" Width="160px" Groupable="false" />
+                    <RadzenDataGridColumn TItem="RInit" Property="SECTION" Title="SECTION" Width="160px" />
+                    <RadzenDataGridColumn TItem="RInit" Property="PARAM" Title="PARAM" Width="160px" Groupable="false" />
+                    <RadzenDataGridColumn TItem="RInit" Property="WERT" Title="WERT" Width="160px" Groupable="false" />
                 </Columns>
             </RadzenDataGrid>
         </RadzenTabsItem>
@@ -108,14 +108,14 @@
                             SelectionMode="DataGridSelectionMode.Single" @bind-Value=@selectedList
                             Density="@Density"
                             Data="@UserSet"
-                            TItem="R_INIT"
+                            TItem="RInit"
                             ColumnWidth="300px"
                             LogicalFilterOperator="LogicalFilterOperator.Or"
                             AllowGrouping="true" HideGroupedColumn="true" @bind-AllGroupsExpanded="@allGroupsExpanded" Group="@OnGroup">
                 <Columns>
-                    <RadzenDataGridColumn TItem="R_INIT" Property="SECTION" Title="SECTION" Width="160px" />
-                    <RadzenDataGridColumn TItem="R_INIT" Property="PARAM" Title="PARAM" Width="160px" Groupable="false" />
-                    <RadzenDataGridColumn TItem="R_INIT" Property="WERT" Title="WERT" Width="160px" Groupable="false" />
+                    <RadzenDataGridColumn TItem="RInit" Property="SECTION" Title="SECTION" Width="160px" />
+                    <RadzenDataGridColumn TItem="RInit" Property="PARAM" Title="PARAM" Width="160px" Groupable="false" />
+                    <RadzenDataGridColumn TItem="RInit" Property="WERT" Title="WERT" Width="160px" Groupable="false" />
                 </Columns>
             </RadzenDataGrid>
         </RadzenTabsItem>
@@ -134,14 +134,14 @@
                             SelectionMode="DataGridSelectionMode.Single" @bind-Value=@selectedList
                             Density="@Density"
                             Data="@VorgabeSet"
-                            TItem="R_INIT"
+                            TItem="RInit"
                             ColumnWidth="300px"
                             LogicalFilterOperator="LogicalFilterOperator.Or"
                             AllowGrouping="true" HideGroupedColumn="true" @bind-AllGroupsExpanded="@allGroupsExpanded" Group="@OnGroup">
                 <Columns>
-                    <RadzenDataGridColumn TItem="R_INIT" Property="SECTION" Title="SECTION" Width="160px" />
-                    <RadzenDataGridColumn TItem="R_INIT" Property="PARAM" Title="PARAM" Width="160px" Groupable="false" />
-                    <RadzenDataGridColumn TItem="R_INIT" Property="WERT" Title="WERT" Width="160px" Groupable="false" />
+                    <RadzenDataGridColumn TItem="RInit" Property="SECTION" Title="SECTION" Width="160px" />
+                    <RadzenDataGridColumn TItem="RInit" Property="PARAM" Title="PARAM" Width="160px" Groupable="false" />
+                    <RadzenDataGridColumn TItem="RInit" Property="WERT" Title="WERT" Width="160px" Groupable="false" />
                 </Columns>
             </RadzenDataGrid>
         </RadzenTabsItem>
@@ -160,13 +160,13 @@
                             SelectionMode="DataGridSelectionMode.Single" @bind-Value=@selectedList
                             Density="@Density"
                             Data="@WerkparameterSet"
-                            TItem="R_INIT"
+                            TItem="RInit"
                             ColumnWidth="300px"
                             LogicalFilterOperator="LogicalFilterOperator.Or">
                 <Columns>
-                    <RadzenDataGridColumn TItem="R_INIT" Property="PARAM" Title="PARAM" Width="90px" />
-                    <RadzenDataGridColumn TItem="R_INIT" Property="WERT" Title="WERT" Width="90px" />
-                    <RadzenDataGridColumn TItem="R_INIT" Property="BEMERKUNG" Title="BEMERKUNG" Width="500px" />
+                    <RadzenDataGridColumn TItem="RInit" Property="PARAM" Title="PARAM" Width="90px" />
+                    <RadzenDataGridColumn TItem="RInit" Property="WERT" Title="WERT" Width="90px" />
+                    <RadzenDataGridColumn TItem="RInit" Property="BEMERKUNG" Title="BEMERKUNG" Width="500px" />
                 </Columns>
             </RadzenDataGrid>
         </RadzenTabsItem>
